// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message[Base] should render correctly  1`] = `
<div>
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Show
    </span>
  </button>
  <button
    class="c-trc8a3 cvey2f3"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Info
    </span>
  </button>
  <button
    class="cflif4m cvey2f3"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Success
    </span>
  </button>
  <button
    class="c-5ygx8x cvey2f3"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Warn
    </span>
  </button>
  <button
    class="cw1xbjk cvey2f3"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Error
    </span>
  </button>
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Close All
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  2`] = `
<div>
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Duration 10 s.
    </span>
  </button>
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Manually close
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  3`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <div
      class="cw6sirj"
    >
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          top
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          middle
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          top-left
        </span>
      </div>
      <div
        class="c-emivhp c-wsxxws"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          top-right
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          bottom-left
        </span>
      </div>
      <div
        class="c-emivhp"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="c-yzux30"
        >
          <span
            class="c-2ldwtt"
            tabindex="1"
          />
        </span>
        <span
          class="c-qgj373"
        >
          bottom-right
        </span>
      </div>
    </div>
  </div>
  <button
    class="c-rg592x cvey2f3 cs6jo0l"
    type="button"
  >
    <span
      class="cboe6wq"
    >
      Show message.
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render default 1`] = `
<div
  class="c8s7xdz"
  data-soui-position="top"
>
  <div
    class="cqjg8rj c-szzlz8 "
  >
    <div
      class="c-1t5zgl c-x2rfl1 c-253odh"
      data-soui-type="message"
    >
      <div
        class="c-501utk"
      >
        <div
          class="c-zfe2lu"
        >
          Test
        </div>
      </div>
      <div
        class="c-x1nmyx"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="cqjg8rj c-szzlz8 "
  >
    <div
      class="c-1t5zgl c-x2rfl1 c-253odh"
      data-soui-type="message"
    >
      <div
        class="c-501utk"
      >
        <div
          class="c-zfe2lu"
        >
          Test
        </div>
      </div>
      <div
        class="c-x1nmyx"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message[Base] should render default 2`] = `
<div
  class="c8s7xdz"
  data-soui-position="top"
>
  <div
    class="cqjg8rj c-szzlz8 "
  >
    <div
      class="c-1t5zgl c-x2rfl1 c-253odh"
      data-soui-type="message"
    >
      <div
        class="c-501utk"
      >
        <div
          class="c-zfe2lu"
        >
          Test
        </div>
      </div>
      <div
        class="c-x1nmyx"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="cqjg8rj c-szzlz8 "
  >
    <div
      class="c-1t5zgl c-x2rfl1 c-253odh"
      data-soui-type="message"
    >
      <div
        class="c-501utk"
      >
        <div
          class="c-zfe2lu"
        >
          Test
        </div>
      </div>
      <div
        class="c-x1nmyx"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
